--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ version: "3.5"
 services:
   nginx:
     build: ./nginx
+    restart: always
     ports:
       - 80:80
     volumes:
@@ -35,3 +36,4 @@ services:
       PMA_HOST: mardiadb
       PMA_USER: root
       PMA_PASSWORD: root
+
